# JAF

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: BloomShader_ps.glsl  BlurHorizontal_ps.glsl  BlurVertical_ps.glsl  ParticleShader_vs.glsl  TexturedShader_ps.glsl  ThresholdShader_ps.glsl  skybox_fs.glsl  skybox_ps.glsl  skybox_vs.glsl
app/src/main/cpp/: native-engine-lib.cpp  pch.h
app/src/main/cpp/fireworks/: engine.cpp  engine.h
app/src/main/cpp/jaf/: animator.h  balanced_collection.h  behaviour.cpp  behaviour.h  bloom_shader.cpp  bloom_shader.h  burst_behaviour.cpp  burst_behaviour.h  burst_creator.cpp  burst_creator.h  creator.h  director.cpp  director.h  engine.cpp  engine.h  instance_collector.h  particle.cpp  particle.h  particle_shader.cpp  particle_shader.h  rocket.cpp  rocket.h  rocket_behaviour.cpp  rocket_behaviour.h  rocket_creator.cpp  rocket_creator.h  sequence.cpp  sequence.h  sequence_creator.cpp  sequence_creator.h  settings.cpp  settings.h  skybox_shader.cpp  skybox_shader.h  slow_burst_behaviour.cpp  slow_burst_behaviour.h  slow_burst_creator.cpp  slow_burst_creator.h  trail_behaviour.cpp  trail_behaviour.h  (+6 more)
app/src/main/cpp/jawe/: bank.h  binary_reader.h  camera.h  color.h  color_simd.h  com_ptr.h  counter.h  cube_texture.cpp  cube_texture.h  engine.cpp  engine.h  framebuffer.cpp  framebuffer.h  instance_collector.h  matrix.h  mesh.h  path.cpp  path.h  png_loader.cpp  png_loader.h  quaternion.h  random.cpp  random.h  range.h  sensor.h  shader.h  simd_object.h  swap_chain.h  texture.cpp  texture.h  texture_loader.cpp  texture_loader.h  updater.cpp  updater.h  util.h  utils.cpp  utils.h  vector3.h  vector3_simd.h
app/src/main/cpp/jawe/gfx/: cube_texture.cpp  cube_texture.h  framebuffer.cpp  framebuffer.h  instance_collector.h  mesh.h  shader.h  swap_chain.h  texture.cpp  texture.h
app/src/main/cpp/jawe/io/: binary_reader.h  png_loader.cpp  png_loader.h  text_reader.h
app/src/main/cpp/jawe/math/: color.h  color_simd.h  matrix.h  matrix_simd.h  quaternion.h  quaternion_simd.h  simd_object.h  vector3.h  vector3_simd.h
app/src/main/java/com/axb/jaf/: CheckBoxItem.java  ComboBox.java  Floats.java  MainActivity.java  NativeEngine.java  Renderer.java  SliderItem.java  TextItem.java  WallpaperService.java
app/src/main/java/com/wallpaper/axb/engine/: NativeEngine.java  Renderer.java  WallpaperService.java
app/src/main/java/com/wallpaper/axb/view/: CheckBoxItem.java  MainActivity.java  SliderItem.java
app/src/main/res/drawable/: button.xml  divider.xml
app/src/main/res/layout/: activity_main.xml  check_box_item.xml  combobox_item.xml  slider_item.xml  spinner_dropdown_item.xml  text_item.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: wallpaper.xml
